replaced the font face Gotham Bold with Montserrat, licensing issues + some weird spacing issues caused by that font lead to lots of little changes

--- a/resources/assets/sass/base/_fonts.scss
+++ b/resources/assets/sass/base/_fonts.scss
@@ -1,10 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Buenard&display=swap');
-
-@font-face {
-    font-family: 'GothamBold';
-    src: url('../fonts/GothamBold.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'GothamBook';
-    src: url('../fonts/GothamBook.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700&display=swap');
