--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -30,9 +30,9 @@ $theme-img-path: $theme-assets-path + "images/";
 $IMAGES-PATH: "~/images/";
 
 
-$header-font: "GothamBold", sans-serif;
+$header-font: 'Montserrat', sans-serif;
 
-$body-font: "GothamBook", sans-serif;
+$body-font: 'Montserrat', sans-serif;
 
 $alt-header-font: "Buenard", serif;
 
@@ -75,5 +75,7 @@ $less-transparent-teal: rgba(0, 94, 98, 0.8);
 $transparent-blue: rgba(123, 172, 190, 0.75);
 $transparent-dark-blue: rgba(95, 155, 177, 0.58);
 $transparent-white: rgba(255,255,255, 0.7);
+$transparent-grey: rgba(28, 28, 29, .49);
+
 
 $max-width: 1200px;
